handle methods in spouse's farm